[tool.poetry]
name = "curs5-hhru"
version = "0.1.0"
description = ""
authors = ["sergey <serglapinofff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"